force-app/main/default/objects/Web_Order__c/Web_Order__c.object-meta.xml
<CustomObject>
    <description>WebOrder object store orders and syncrinized with opportunity object</description>
    <label>Web Order</label>
    <nameField>
        <label>Web Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>