force-app/main/default/objects/Web_Order__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Name Opportunity field</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WebOrders</relationshipLabel>
    <relationshipName>AccountWebOrders</relationshipName>
    <type>Lookup</type>
</CustomField>