force-app/main/default/objects/Web_Order__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Contract field</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>ContractWebOrders</relationshipLabel>
    <relationshipName>ContractWebOrders</relationshipName>
    <type>Lookup</type>
</CustomField>