force-app/main/default/objects/Web_Order__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <description>Identifier for related Opportunity</description>
    <label>Opportunity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>