force-app/main/default/objects/Web_Order__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <description>Order Number Opportunity field</description>
    <label>Order Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>